# lazy_config

./: EXAMPLES.md  README.md  pyproject.toml  render_examples.py
examples/: example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py
examples/configs/: augmentations.json  training.yaml
ghostconfig/: __init__.py  errors.py  flattened_data.py  ghost_config.py  suggestions.py
lazy_config/: __init__.py  _errors.py  _suggestions.py  _tracker.py  errors.py  lazy_config.py  tracker.py
tests/: test_ghost_config.py  test_lazy_config.py
