[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazy_config"
version = "0.1.0"
description = "A config system that is lazily validated as parameters are used"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/thomasr/lazy_config"

[tool.hatch.build.targets.wheel]
packages = ["lazy_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
