[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazy_config"
version = "0.1.0"
description = "A config system that is lazily validated as parameters are used"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["omegaconf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/ChainBreak/lazy_config"

[tool.hatch.build.targets.wheel]
packages = ["lazy_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
